静态编译 但是测试的机器libc libc++版本有问题

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,13 +14,12 @@ find_library(CUBLAS_LIBRARY cublas /usr/local/cuda-12.1/targets/x86_64-linux/lib
 find_library(CUSPARSE_LIBRARY cusparse /usr/local/cuda-12.1/targets/x86_64-linux/lib)
 find_library(CUDART_LIBRARY cudart /usr/local/cuda-12.1/targets/x86_64-linux/lib)
 find_library(CUSOLVER_LIBRARY cusolver /usr/local/cuda-12.1/targets/x86_64-linux/lib)
-
+find_library(NVTX_LIB nvToolsExt /usr/local/cuda-12.1/targets/x86_64-linux/lib)
 #fadbad++
 include_directories(/home/rong/桌面/Mycode/lib/FADBAD++-2.1/FADBAD++)
 
 # add_executable
-add_executable(${PROJECT_NAME} ${CURRENT_WORK_PATH}/src/Solver_openmp_ad.cpp)
-
+add_executable(${PROJECT_NAME} ${CURRENT_WORK_PATH}/src/test.cpp)
 # 链接OpenMP库
 find_package(OpenMP REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
@@ -36,10 +35,21 @@ set_target_properties(${PROJECT_NAME}
 # 链接库
 target_include_directories(${PROJECT_NAME} PRIVATE ${CURRENT_WORK_PATH}/src)
 target_include_directories(${PROJECT_NAME} PRIVATE /home/rong/桌面/Mycode/lib/AMGX/include)
+target_link_libraries(${PROJECT_NAME} PUBLIC -static-libstdc++ -static-libgcc)
+target_link_libraries(${PROJECT_NAME} PUBLIC "/home/rong/桌面/Mycode/lib/AMGX/build/libamgx.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcusolver_static.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcublas_static.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcublasLt_static.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcudart_static.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libculibos.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcusparse_static.a")
+target_link_libraries(${PROJECT_NAME} PUBLIC  ${NVTX_LIB})
+target_link_libraries(${PROJECT_NAME} PUBLIC "/usr/local/lib/libgsl.a" "/usr/local/lib/libgslcblas.a")
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${CUSPARSE_LIBRARY} ${CUBLAS_LIBRARY} ${CUDART_LIBRARY} ${CUSOLVER_LIBRARY})
-target_link_libraries(${PROJECT_NAME} PUBLIC amgxsh)
-target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
+# target_link_libraries(${PROJECT_NAME} PUBLIC  ${CUSOLVER_LIBRARY} ${CUDART_LIBRARY} ${CUBLAS_LIBRARY} ${CUSPARSE_LIBRARY})
+# target_link_libraries(${PROJECT_NAME} PUBLIC amgxsh)
+# target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
+
 
 # copy
 set(TARGET_DIRECTORY "${CURRENT_WORK_PATH}/")
