--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿#Current work path
-set(CURRENT_WORK_PATH /home/rong/桌面/Mycode/shale)
+set(CURRENT_WORK_PATH /home/rong/Mycode/SinglePhase)
 set(LIB_PATH /home/rong/桌面/Mycode/lib)
 
 #寻找添加Eigen头文件目录 
@@ -8,13 +8,13 @@ include_directories(${EIGEN3_INCLUDE_DIRS})
 
 #寻找添加CUDA的头文件目录 寻找库目录
 find_package(CUDA REQUIRED)
-include_directories(/home/rong/桌面/Mycode/lib/cuda-samples-master/Common)
+include_directories(/home/rong/Mycode/lib/cuda-samples-master/Common)
 include_directories(${CUDA_INCLUDE_DIRS})
-find_library(CUBLAS_LIBRARY cublas /usr/local/cuda-12.1/targets/x86_64-linux/lib)
-find_library(CUSPARSE_LIBRARY cusparse /usr/local/cuda-12.1/targets/x86_64-linux/lib)
-find_library(CUDART_LIBRARY cudart /usr/local/cuda-12.1/targets/x86_64-linux/lib)
-find_library(CUSOLVER_LIBRARY cusolver /usr/local/cuda-12.1/targets/x86_64-linux/lib)
-find_library(NVTX_LIB nvToolsExt /usr/local/cuda-12.1/targets/x86_64-linux/lib)
+find_library(CUBLAS_LIBRARY cublas /usr/local/cuda-12.9/targets/x86_64-linux/lib)
+find_library(CUSPARSE_LIBRARY cusparse /usr/local/cuda-12.9/targets/x86_64-linux/lib)
+find_library(CUDART_LIBRARY cudart /usr/local/cuda-12.9/targets/x86_64-linux/lib)
+find_library(CUSOLVER_LIBRARY cusolver /usr/local/cuda-12.9/targets/x86_64-linux/lib)
+# find_library(NVTX_LIB nvToolsExt /usr/local/cuda-12.1/targets/x86_64-linux/lib)
 #fadbad++
 include_directories(/home/rong/桌面/Mycode/lib/FADBAD++-2.1/FADBAD++)
 # add_executable
@@ -33,21 +33,21 @@ set_target_properties(${PROJECT_NAME}
 
 # 链接库
 target_include_directories(${PROJECT_NAME} PRIVATE ${CURRENT_WORK_PATH}/src)
-target_include_directories(${PROJECT_NAME} PRIVATE /home/rong/桌面/Mycode/lib/AMGX/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC -static-libstdc++ -static-libgcc)
-target_link_libraries(${PROJECT_NAME} PUBLIC "/home/rong/桌面/Mycode/lib/AMGX/build/libamgx.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcusolver_static.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcublas_static.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcublasLt_static.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcudart_static.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libculibos.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.1/targets/x86_64-linux/lib/libcusparse_static.a")
-target_link_libraries(${PROJECT_NAME} PUBLIC  ${NVTX_LIB})
-target_link_libraries(${PROJECT_NAME} PUBLIC "/usr/local/lib/libgsl.a" "/usr/local/lib/libgslcblas.a")
+target_include_directories(${PROJECT_NAME} PRIVATE /home/rong/Mycode/lib/AMGX/include)
+# target_link_libraries(${PROJECT_NAME} PUBLIC -static-libstdc++ -static-libgcc)
+# target_link_libraries(${PROJECT_NAME} PUBLIC "/home/rong/Mycode/lib/AMGX/build/libamgx.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libcusolver_static.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libcublas_static.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libcublasLt_static.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libcudart_static.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libculibos.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/usr/local/cuda-12.9/targets/x86_64-linux/lib/libcusparse_static.a")
+# target_link_libraries(${PROJECT_NAME} PUBLIC  "/home/rong/Mycode/lib/libnvToolsExt.so.1.0.0")
+# target_link_libraries(${PROJECT_NAME} PUBLIC "/home/rong/Mycode/lib/gsl/lib/libgsl.a" "/home/rong/Mycode/lib/gsl/lib/libgslcblas.a")
 
-# target_link_libraries(${PROJECT_NAME} PUBLIC  ${CUSOLVER_LIBRARY} ${CUDART_LIBRARY} ${CUBLAS_LIBRARY} ${CUSPARSE_LIBRARY})
-# target_link_libraries(${PROJECT_NAME} PUBLIC amgxsh)
-# target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
+target_link_libraries(${PROJECT_NAME} PUBLIC  ${CUSOLVER_LIBRARY} ${CUDART_LIBRARY} ${CUBLAS_LIBRARY} ${CUSPARSE_LIBRARY})
+target_link_libraries(${PROJECT_NAME} PUBLIC "/home/rong/Mycode/lib/AMGX/build/libamgxsh.so")
+target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
 
 
 # copy
