--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,7 +108,11 @@
         "superlusupport": "cpp",
         "unistd.h": "c",
         "*.expression": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "charconv": "cpp",
+        "expected": "cpp",
+        "span": "cpp",
+        "variant": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabledIfIncludesResolve",
     "C_Cpp.dimInactiveRegions": false
