--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,19 +3,20 @@
     "configurations": [
         {
             "name": "C/C++: g++ build and debug active file",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
             // "program": "/home/rong/桌面/Mycode/Mycode/单相三组分可压缩动态/C1C4C10/build/bin/main",
-            "program": "/home/rong/Mycode/SinglePhase/kong/transport/2-PORES-4-OM_HP/myproject",
+            "program": "/home/rong/Mycode/SinglePhase/myproject",
             // "program": "/home/rong/桌面/Mycode/shale-gas/zz50_1_hetergenous/hybrid_debug/myproject",
-            "args": ["-R=chol","-P=symamd","-file=lap2D_5pt_n100.mtx"],
+            // "args": ["-R=chol","-P=symamd","-file=lap2D_5pt_n100.mtx"],
             "stopAtEntry": true,
-            "cwd": "/home/rong/Mycode/SinglePhase/kong/transport/2-PORES-4-OM_HP/",
+            "cwd": "/home/rong/Mycode/SinglePhase/",
             // "cwd": "/home/rong/桌面/Mycode/shale-gas/zz50_1_hetergenous/hybrid_debug/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "/usr/bin/gdb",
+            // "miDebuggerPath": "/usr/bin/gdb",
+            "miDebuggerPath": "/usr/local/cuda/bin/cuda-gdb",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
