--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,11 @@
             "type": "lldb",
             "request": "launch",
             // "program": "/home/rong/桌面/Mycode/Mycode/单相三组分可压缩动态/C1C4C10/build/bin/main",
-            "program": "/home/rong/Mycode/SinglePhase/kong/transport/2000_new/myproject",
+            "program": "/home/rong/Mycode/SinglePhase/Shale/LP-3-Lu203-12B-1693-1668-0/myproject copy",
             // "program": "/home/rong/桌面/Mycode/shale-gas/zz50_1_hetergenous/hybrid_debug/myproject",
             // "args": ["-R=chol","-P=symamd","-file=lap2D_5pt_n100.mtx"],
             "stopAtEntry": true,
-            "cwd": "/home/rong/Mycode/SinglePhase/kong/transport/2000_new/",
+            "cwd": "/home/rong/Mycode/SinglePhase/Shale/LP-3-Lu203-12B-1693-1668-0/",
             // "cwd": "/home/rong/桌面/Mycode/shale-gas/zz50_1_hetergenous/hybrid_debug/",
             "environment": [],
             "externalConsole": false,
