沃日 本质上我需要一个线性方程组的求解器和一个非线性方程组的求解器。在线性方程组求解器中，我可以直接求解AX=B。在非线性方程组求解器中，我既可以使用Newton法求解一组线性方程组，也可以使用Newton法求解一组非线性方程组。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,15 +120,16 @@
         "forward_list": "cpp",
         "ranges": "cpp",
         "typeindex": "cpp",
-        "source_location": "cpp"
+        "source_location": "cpp",
+        "jacobianassembler_liquidmatrixconfig_2transport_dirichletcpp": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "C_Cpp.dimInactiveRegions": false,
     "python-envs.pythonProjects": [
         {
             "path": "d2l-zh-pytorch-slides",
-            "envManager": "ms-python.python:conda",
-            "packageManager": "ms-python.python:conda"
+            "envManager": "ms-python.python:system",
+            "packageManager": "ms-python.python:pip"
         }
     ],
     "python-envs.defaultEnvManager": "ms-python.python:system",
