更新了CMakeLists.txt和wzw的输出流量

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿#Current work path
-set(CURRENT_WORK_PATH /home/rong/SinglePhase)
-set(LIB_PATH /home/rong/lib)
-set(CUDA_PATH /usr/local/cuda-12.6)
+set(CURRENT_WORK_PATH /home/rong/Mycode/SinglePhase)
+set(LIB_PATH /home/rong/Mycode/lib)
+set(CUDA_PATH /usr/local/cuda-12.9)
 # add_library(gpu_solver_single STATIC ${CURRENT_WORK_PATH}/src/GPU.cpp)
 # find_package(OpenMP REQUIRED)
 # target_link_libraries(gpu_solver_single PRIVATE OpenMP::OpenMP_CXX)
@@ -31,7 +31,7 @@ set(CUDA_PATH /usr/local/cuda-12.6)
 # target_link_libraries(gpu_solver_single PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcusparse_static.a")
 # target_link_libraries(gpu_solver_single PRIVATE  "/home/rong/Mycode/lib/libnvToolsExt.so.1.0.0")
 
-add_executable(${PROJECT_NAME} ${CURRENT_WORK_PATH}/src/Solver_openmp_ad_No_preci.cpp)
+add_executable(${PROJECT_NAME} ${CURRENT_WORK_PATH}/src/Solver_openmp.cpp)
 
 # 添加头文件路径
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIB_PATH}/AMGX/include)
@@ -57,22 +57,22 @@ set_target_properties(${PROJECT_NAME}
   )
 
 #寻找添加CUDA的头文件目录 寻找库目录
-find_package(CUDA REQUIRED)
-include_directories(/home/rong/Mycode/lib/cuda-samples-master/Common)
-include_directories(${CUDA_INCLUDE_DIRS})
-find_library(CUBLAS_LIBRARY cublas ${CUDA_PATH}/targets/x86_64-linux/lib)
-find_library(CUSPARSE_LIBRARY cusparse ${CUDA_PATH}/targets/x86_64-linux/lib)
-find_library(CUDART_LIBRARY cudart ${CUDA_PATH}/targets/x86_64-linux/lib)
-find_library(CUSOLVER_LIBRARY cusolver ${CUDA_PATH}/targets/x86_64-linux/lib)
-find_library(NVTX_LIB nvToolsExt ${CUDA_PATH}/targets/x86_64-linux/lib)
-target_link_libraries(${PROJECT_NAME} PUBLIC  ${CUSOLVER_LIBRARY} ${CUDART_LIBRARY} ${CUBLAS_LIBRARY} ${CUSPARSE_LIBRARY})
+# find_package(CUDA REQUIRED)
+# include_directories(/home/rong/Mycode/lib/cuda-samples-master/Common)
+# include_directories(${CUDA_INCLUDE_DIRS})
+# find_library(CUBLAS_LIBRARY cublas ${CUDA_PATH}/targets/x86_64-linux/lib)
+# find_library(CUSPARSE_LIBRARY cusparse ${CUDA_PATH}/targets/x86_64-linux/lib)
+# find_library(CUDART_LIBRARY cudart ${CUDA_PATH}/targets/x86_64-linux/lib)
+# find_library(CUSOLVER_LIBRARY cusolver ${CUDA_PATH}/targets/x86_64-linux/lib)
+# find_library(NVTX_LIB nvToolsExt ${CUDA_PATH}/targets/x86_64-linux/lib)
+# target_link_libraries(${PROJECT_NAME} PUBLIC  ${CUSOLVER_LIBRARY} ${CUDART_LIBRARY} ${CUBLAS_LIBRARY} ${CUSPARSE_LIBRARY})
 
 # 连接AMGX库和头文件
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIB_PATH}/AMGX/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC "${LIB_PATH}/AMGX/build/libamgxsh.so")
+# target_link_libraries(${PROJECT_NAME} PUBLIC "${LIB_PATH}/AMGX/build/libamgxsh.so")
 
 # 连接GLS数学库
-target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
+# target_link_libraries(${PROJECT_NAME} PUBLIC gsl gslcblas)
 
 # 连接fadbad++
 include_directories(${LIB_PATH}/FADBAD++-2.1/FADBAD++/)
@@ -80,23 +80,23 @@ include_directories(${LIB_PATH}/FADBAD++-2.1/FADBAD++/)
 
 #### 静态连接库 #######
 # CUDA 头文件
-# find_package(CUDA REQUIRED)
-# include_directories(${LIB_PATH}/cuda-samples-master/Common)
-# include_directories(${CUDA_INCLUDE_DIRS})
+find_package(CUDA REQUIRED)
+include_directories(${LIB_PATH}/cuda-samples-master/Common)
+include_directories(${CUDA_INCLUDE_DIRS})
 # 静态连接AMGX库
-# target_link_libraries(${PROJECT_NAME} PRIVATE "/home/rong/Mycode/lib/AMGX/build/libamgx.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE "${LIB_PATH}/AMGX/build/libamgx.a")
 # 静态连接CUDA库
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcusolver_static.a")
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcublas_static.a")
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcublasLt_static.a")
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcudart_static.a")
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libculibos.a")
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcusparse_static.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcusolver_static.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcublas_static.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcublasLt_static.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcudart_static.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libculibos.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${CUDA_PATH}/targets/x86_64-linux/lib/libcusparse_static.a")
 
 # 动态连接 libnvToolsExt.so.1.0.0 这个库没有静态版本
-# target_link_libraries(${PROJECT_NAME} PRIVATE  "/home/rong/Mycode/lib/libnvToolsExt.so.1.0.0")
+target_link_libraries(${PROJECT_NAME} PRIVATE  "${LIB_PATH}/libnvToolsExt.so.1.0.0")
 # 静态连接GSL库
-# target_link_libraries(${PROJECT_NAME} PRIVATE "/home/rong/Mycode/lib/gsl/lib/libgsl.a" "/home/rong/Mycode/lib/gsl/lib/libgslcblas.a")
+target_link_libraries(${PROJECT_NAME} PRIVATE "${LIB_PATH}/gsl/lib/libgsl.a" "${LIB_PATH}/gsl/lib/libgslcblas.a")
 #### 静态连接库 #######
 
 # copy
